force-app/main/default/objects/AuditLog__c/AuditLog__c.object-meta.xml
<CustomObject>
    <description>Contains audit logs of data modification done by backend processes such as data fix.</description>
    <label>Audit Log</label>
    <nameField>
        <displayFormat>AL-{00000}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>