force-app/main/default/objects/AuditLog__c/fields/DefectID__c.field-meta.xml
<CustomField>
    <fullName>DefectID__c</fullName>
    <description>TFS defect ID</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Defect ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>