force-app/main/default/objects/AuditLog__c/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <description>Object name where the records are modified.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>