force-app/main/default/objects/AuditLog__c/fields/SalesforceIDs__c.field-meta.xml
<CustomField>
    <fullName>SalesforceIDs__c</fullName>
    <description>Salesforce IDs of the modified records. IDs are delimited by comma (,).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Salesforce IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>