force-app/main/default/objects/AuditLog__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated User</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>